@@ -1,5 +1,10 @@
 2008-07-15  Hannu Nuotio  <hannu.nuotio@tut.fi>
 
+	* arch/unix/x11/gnome/uipalcontrol.c: Removed "Emulation" from
+	radio button texts. Fixes single size window stretching.
+
+2008-07-15  Hannu Nuotio  <hannu.nuotio@tut.fi>
+
 	* c64/c64keyboard.c: Changed Restore to ignore key release and
 	automatically clear the NMI. Fixes "nmitest" (bug 2016657).
 
